--- a/package.json
+++ b/package.json
@@ -5,18 +5,23 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "build": "next build",
-    "start": "next start"
+    "build": "next build && next export -o build/"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "gray-matter": "^4.0.2",
     "next": "^10.1.3",
+    "raw-loader": "^4.0.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-markdown": "^6.0.0",
+    "react-syntax-highlighter": "^15.4.3",
+    "slug": "^4.0.4"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.24.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-markdown": "^2.0.1"
